# libretinex

./: AUTHORS  CMakeLists.txt  README.md  index.html
data/: test-1.pgm
debian/: changelog  control  copyright  libretinex-doc.doc-base  watch
doc/: CMakeLists.txt  retinex-me.pod.in
doxygen/HEAD/: annotated.html  classes.html  classlibretinex_1_1_retinex-members.html  classlibretinex_1_1_retinex.html  doc_8hh.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  fwd_8hh.html  fwd_8hh__dep__incl.map  fwd_8hh__dep__incl.md5  graph_legend.html  index.html  libretinex_8hh.html  libretinex_8hh__incl.map  libretinex_8hh__incl.md5  main.html  namespacelibretinex.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  retinex_8hh.html  retinex_8hh__dep__incl.map  retinex_8hh__dep__incl.md5  retinex_8hh__incl.map  retinex_8hh__incl.md5  tree.html
doxygen/HEAD/search/: all_63.html  all_64.html  all_6c.html  all_72.html  all_73.html  all_7e.html  classes_72.html  enumvalues_64.html  enumvalues_6c.html  enumvalues_6e.html  files_6c.html  files_72.html  functions_6f.html  functions_72.html  namespaces_6c.html  search.js  typedefs_69.html  typedefs_76.html
include/: libretinex.hh
include/libretinex/: doc.hh  fwd.hh  retinex.hh
src/: CMakeLists.txt  retinex.cc
